--- a/style.css
+++ b/style.css
@@ -1,37 +1,63 @@
-* {
+ * {
     box-sizing: border-box;
 }
 
-.container h1 {
-    text-align: center;
-    font-weight: bold;
+.row {
+    width: 100%;
 }
 
-.col-lg-4 {
-    background-color: #c8c4c4; 
-    border: 10px solid black; 
-     position: relative;
-    
-}
-.col-md-6 {
-    background-color: #c8c4c4;
-    border: 1px solid black; 
-    position: relative;
-    
-}
-
-  h4 {
-    font-weight: bold;
-    background-color: pink;
-    /*position: absolute;
-    top:0;
-    right:0;*/
-} 
 
 
-.container p {
+.container {
     width: 100%;
     height: 100%;
+    overflow: none;
+  }
+
+ 
+
+ h1 {
+    text-align: center;
+    font-weight: bold;
+    color: black;
+}
+
+.content-name  {
+  overflow: none;
+  text-align: center;
+  border: 4px solid black;
+  width: 100%;
+  height: 40px; 
+  padding: 5px;
+  font-weight: bold;
+  /* float: right;
+  margin-top: 0;
+  margin-right: 0;
+     */
+}
+
+.content {
+    border: 4px solid black;
+    width: 100%;
+    height: auto;
+    margin: 2.5%;
+    color: black
+    font-size: 25px;
+    padding: 2%;
+    padding-top: 55px;
+    background-color: rgba(0,0,0,0.3);
+    position: relative;
+  }
+.name1 {
+    background-color: #ffc0cb;
+
+}
+.name2 {
+    color: whitesmoke;
+    background-color: rgb(232, 109, 109);
+}
+.name3 {
+    background-color: rgb(224, 224, 148);
 }
     
 
@@ -39,9 +65,7 @@
     .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12
     {
         float: left;
-        border: #514e4e;
         padding: 10px;
-        border: 1px solid black;
     }
     .col-lg-1 {
         width: 8.33%;
@@ -119,4 +143,4 @@
     .col-md-12 {
         width: 100%;
     }
-}
+} 
