--- a/style.css
+++ b/style.css
@@ -7,57 +7,70 @@
 }
 
 
-
-.container {
-    width: 100%;
-    height: 100%;
-    overflow: none;
-  }
-
- 
-
  h1 {
     text-align: center;
     font-weight: bold;
     color: black;
 }
 
-.content-name  {
-  overflow: none;
-  text-align: center;
-  border: 4px solid black;
-  width: 100%;
-  height: 40px; 
-  padding: 5px;
-  font-weight: bold;
-  /* float: right;
-  margin-top: 0;
-  margin-right: 0;
-     */
+section {
+    position: relative;
+    padding: 15px;
+    width: 100%;
+}
+p {
+    position: relative;
+    clear: right;
 }
 
-.content {
-    border: 4px solid black;
-    width: 100%;
-    height: auto;
-    margin: 2.5%;
-    color: black
-    font-size: 25px;
-    padding: 2%;
-    padding-top: 55px;
-    background-color: rgba(0,0,0,0.3);
-    position: relative;
-  }
-.name1 {
+.name1  {
+    float: right;
+    width: 100px;
+    padding: 5px;
+    margin: -3px -3px 0;
+    border: 3px solid black;
+    text-align: center;
+    font-weight: bold;
+    font-size: 125%;
     background-color: #ffc0cb;
 
+    
 }
+
+div {
+    border: 4px solid black;
+    background-color: rgba(0,0,0,0.3);
+    position: relative;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+  }
+
 .name2 {
     color: whitesmoke;
     background-color: rgb(232, 109, 109);
+    float: right;
+    width: 100px;
+    padding: 5px;
+    margin: -3px -3px 0;
+    border: 3px solid black;
+    text-align: center;
+    font-weight: bold;
+    font-size: 125%;
+
 }
 .name3 {
     background-color: rgb(224, 224, 148);
+    float: right;
+    width: 100px;
+    padding: 5px;
+    margin: -3px -3px 0;
+    border: 3px solid black;
+    text-align: center;
+    font-weight: bold;
+    font-size: 125%;
+
 }
     
 
