--- a/Week3Assignment/style.css
+++ b/Week3Assignment/style.css
@@ -1,321 +1,341 @@
 body {
-    font-size: 16px;
-    color: #fff;
-    background-color: #61122f;
-    font-family: 'Oxygen', sans-serif;
+  font-size: 16px;
+  color: #fff;
+  background-color: #61122f;
+  font-family: 'Oxygen', sans-serif;
 }
 
-#header-nav { 
-    background-color: #f6b319;
-    border-radius: 0;
-    border: 0;
-} 
+#header-nav {
+  background-color: #f6b319;
+  border-radius: 0;
+  border: 0;
+}
 
 #logo-img {
-    background: url('../img/logo1.jpg') no-repeat;
-    width: 150px;
-    height: 150px;
-    margin:10px 15px 10px 0; 
+  background: url('img/logo1.jpg') no-repeat;
+  width: 150px;
+  height: 150px;
+  margin: 10px 15px 10px 0;
 }
 
 .navbar-brand {
-    padding-top: 25px;
+  padding-top: 25px;
 }
-.navbar-brand h1 {/* Restaurant Name */
-    font-family: 'Lora', serif;
-    color: #557c3e;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-shadow: 1px 1px 1px #222;
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: .75;
-    
-}
-
-.navbar-brand a:hover, .navbar-brand a:focus {
-    text-decoration: none;
+.navbar-brand h1 {
+  /* Restaurant Name */
+  font-family: 'Lora', serif;
+  color: #557c3e;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 0.75;
 }
 
- .navbar-brand p { /*kosher cert */
-    color: #000;
-    text-transform: uppercase;
-    font-size: .7em;
-    margin-top: 15px;
+.navbar-brand a:hover,
+.navbar-brand a:focus {
+  text-decoration: none;
 }
-.navbar-brand p span { /*star-k*/
-    vertical-align: middle;
+
+.navbar-brand p {
+  /*kosher cert */
+  color: #000;
+  text-transform: uppercase;
+  font-size: 0.7em;
+  margin-top: 15px;
+}
+.navbar-brand p span {
+  /*star-k*/
+  vertical-align: middle;
 }
 
 #nav-list {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 #nav-list a {
-    color: #951c49;
-    text-align: center;
+  color: #951c49;
+  text-align: center;
 }
 
 #nav-list a:hover {
-    background: #e7e7e7;
+  background: #e7e7e7;
 }
 
 #nav-list a span {
-    font-size: 1.8em;
+  font-size: 1.8em;
 }
 
 #phone {
-    margin-top: 5px;
+  margin-top: 5px;
 }
-#phone a {/*phone number*/
-    text-align: center;
-    padding-bottom: 0;
+#phone a {
+  /*phone number*/
+  text-align: center;
+  padding-bottom: 0;
 }
-#phone div { /*we deliver*/
-    color: #557c3e;
-    text-align: right;
-    padding-right: 15px;
+#phone div {
+  /*we deliver*/
+  color: #557c3e;
+  text-align: right;
+  padding-right: 15px;
 }
 
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #61122f;
+.navbar-header button.navbar-toggle,
+.navbar-header .icon-bar {
+  border: 1px solid #61122f;
 }
 .navbar-header button.navbar-toggle {
-    clear: both;
-    margin-top: -30px;
+  clear: both;
+  margin-top: -30px;
 }
 /* End Header */
 
 /*Footer*/
 .panel-footer {
-    margin-top: 30px;
-    padding-top: 35px;
-    padding-bottom: 30px;
-    background-color: #222;
-    border-top: 0;
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
 }
 
 .panel-footer div .row {
-        margin-bottom: 35px;
+  margin-bottom: 35px;
 }
 
-#hour,#address {
-    line-height: 2;
+#hour,
+#address {
+  line-height: 2;
 }
 
-#hour > span, #address > span {
-    font-size: 1.3em;
+#hour > span,
+#address > span {
+  font-size: 1.3em;
 }
 
 #address p {
-    color: #557c3e;
-    font-size: .8em;
-    line-height: 1.7;
+  color: #557c3e;
+  font-size: 0.8em;
+  line-height: 1.7;
 }
 
 #testimonials {
-    font-style: italic;
+  font-style: italic;
 }
 
 #testimonials p:nth-child(2) {
-    margin-top: 25px;
+  margin-top: 25px;
 }
 /*End Footer*/
 
-
 /*Home Page*/
 .container .jumbotron {
-    box-shadow: 0 0 50px #3f0c1f;
-    border: 2px solid #3f0c1f ;
+  box-shadow: 0 0 50px #3f0c1f;
+  border: 2px solid #3f0c1f;
 }
 
-#menu-tile, #special-tile, #map-tile {
-    height: 250px;
-    width: 100%;
-    margin-bottom: 15px;
-    position: relative;
-    border: 2px solid #3f0c1f;
-    overflow: hidden;
+#menu-tile,
+#special-tile,
+#map-tile {
+  height: 250px;
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3f0c1f;
+  overflow: hidden;
 }
 
-#menu-tile:hover, #special-tile:hover, #map-tile:hover {
-    box-shadow: 0 1px 5px 1px #cccc;
+#menu-tile:hover,
+#special-tile:hover,
+#map-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccc;
 }
 
 #menu-tile {
-    background: url(../img/menu-tile.jpg) no-repeat;
-    background-position: center;
+  background: url(img/menu-tile.jpg) no-repeat;
+  background-position: center;
 }
 #special-tile {
-    background: url(../img/specials-tile.jpg) no-repeat;
-    background-position: center;
+  background: url(img/specials-tile.jpg) no-repeat;
+  background-position: center;
 }
 
-#menu-tile span, #special-tile span, #map-tile span {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 1.6em;
-    text-transform: uppercase;
-    background-color: #000;
-    color: #fff;
-    opacity: .8;
-
+#menu-tile span,
+#special-tile span,
+#map-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: 0.8;
 }
 /*End Home Page*/
 
 /*Menu Categories Page*/
 .category-tile {
-    position: relative;
-    border: 2px solid #3f0c1f;
-    overflow: hidden;
-    width: 200px;
-    height: 200px;
-    margin: 0 auto 15px;
+  position: relative;
+  border: 2px solid #3f0c1f;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto 15px;
 }
 
 .category-tile span {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 1.2em;
-    text-transform: uppercase;
-    background-color: #000;
-    color: #fff;
-    opacity: .8;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: 0.8;
 }
 
 .category-tile:hover {
-    box-shadow: 0 1px 5px 1px #ccc;
+  box-shadow: 0 1px 5px 1px #ccc;
 }
 
 #menu-categories-title + div {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 /*Menu Caterories Page End*/
 
 /*Single Category Page*/
 
 .menu-item-tile {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .menu-item-tile hr {
-    width: 80%;
+  width: 80%;
 }
 
 .menu-item-tile .menu-item-price {
-    font-size: 1.1em;
-    text-align: right;
-    margin-top: -15px;
-    margin-right: -15px;
+  font-size: 1.1em;
+  text-align: right;
+  margin-top: -15px;
+  margin-right: -15px;
 }
 
 .menu-item-tile .menu-item-price span {
-    font-size: .6em;
+  font-size: 0.6em;
 }
 .menu-item-photo {
-    position: relative;
-    border: 2px solid #3f0c1f;
-    overflow: hidden;
-    padding: 0; 
-    margin-right: -15px;
-    margin-left: auto;
-    margin-bottom: 20px;
-    max-width: 250px;
+  position: relative;
+  border: 2px solid #3f0c1f;
+  overflow: hidden;
+  padding: 0;
+  margin-right: -15px;
+  margin-left: auto;
+  margin-bottom: 20px;
+  max-width: 250px;
 }
 .menu-item-photo div {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 80px;
-    background-color: #557c3e;
-    text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 80px;
+  background-color: #557c3e;
+  text-align: center;
 }
 .menu-item-description {
-    padding-right: 30px;
+  padding-right: 30px;
 }
 h3.menu-item-title {
-    margin: 0 0 10px 0;
+  margin: 0 0 10px 0;
 }
 .menu-item-details {
-    font-size: .8em;
-    font-style: italic;
+  font-size: 0.8em;
+  font-style: italic;
 }
-
 
 /*******Large Device*******/
 @media (min-width: 1200px) {
-    .container .jumbotron {
-        background: url('../img/jumbotron_1200.jpg') no-repeat;
-        height: 675px;
-      }
+  .container .jumbotron {
+    background: url('img/jumbotron_1200.jpg') no-repeat;
+    width: auto;
+    height: 675px;
+  }
 }
 
 /*****Medium Device*****/
-@media (min-width: 992px) and (max-width:1199px) {
-    /*Header*/
-    #logo-img {
-        background: url('../img/logo2.jpg') no-repeat;
-        width: 100px;
-        height: 100px;
-        margin: 5px 5px 5px 0;
-    }
-    /* End Header*/
+@media (min-width: 992px) and (max-width: 1199px) {
+  /*Header*/
+  #logo-img {
+    background: url('img/logo2.jpg') no-repeat;
+    width: 100px;
+    height: 100px;
+    margin: 5px 5px 5px 0;
+  }
+  /* End Header*/
 
-    /* Home Page*/
-.container .jumbotron {
-    background: url('../img/jumbotron_992.jpg') no-repeat;
+  /* Home Page*/
+  .container .jumbotron {
+    background: url('img/jumbotron_992.jpg') no-repeat;
+    width: auto;
     height: 558px;
-} /*End Home Page*/
-
+  } /*End Home Page*/
 }
 
 /*****Small Devices******/
 @media (min-width: 768px) and (max-width: 991px) {
-    .container .jumbotron {
-        background: url('../img/jumbotron_768.jpg') no-repeat;
-        height: 432px;
-} 
-
+  .container .jumbotron {
+    background: url('img/jumbotron_768.jpg') no-repeat;
+    width: auto;
+    height: 432px;
+  }
 }
 
 /******Extra Small Devices******/
-@media (max-width:767px) {
-    /*Header*/
-    
+@media (min-width: 479px) and (max-width: 767px) {
+  /*Header*/
 
-    .navbar-brand {
-        padding-top: 10px;
-        height: 80px;
-    }
-    .navbar-brand h1 {/*Restaurant Name*/
-        padding-top: 10px;
-        font-size: 5vw;/* 1vw = 1% of viewport width*/
-    }
-    .navbar-brand p {/*Kosher cert */
-        font-size: .6em;
-        margin-top: 12px;
-    }
-    .navbar-brand p img { /*Star-K */
-        height: 20px;
-    }
+  .container .jumbotron {
+    background: url('img/jumbotron_478.jpg') no-repeat;
+    /* width: auto; */
+    height: 432px;
+  }
 
-#collapsable-nav a {
+  .navbar-brand {
+    padding-top: 10px;
+    height: 80px;
+  }
+  .navbar-brand h1 {
+    /*Restaurant Name*/
+    padding-top: 10px;
+    font-size: 5vw; /* 1vw = 1% of viewport width*/
+  }
+  .navbar-brand p {
+    /*Kosher cert */
+    font-size: 0.6em;
+    margin-top: 12px;
+  }
+  .navbar-brand p img {
+    /*Star-K */
+    height: 20px;
+  }
+
+  #collapsable-nav a {
     font-size: 1.2em;
-}
+  }
 
-#collapsable-nav a span {
+  #collapsable-nav a span {
     font-size: 1em;
     margin-right: 5px;
-}
+  }
 
-#call-btn > a {
+  #call-btn > a {
     font-size: 1.5em;
     display: block;
     margin: 0 20px;
@@ -323,76 +343,76 @@ h3.menu-item-title {
     border: 2px solid #fff;
     background-color: #f6b319;
     color: #951c49;
-}
+  }
 
-#xs-deliver {
+  #xs-deliver {
     margin-top: 5px;
-    font-size: .7em;
-    letter-spacing: .1em;
+    font-size: 0.7em;
+    letter-spacing: 0.1em;
     text-transform: uppercase;
-}
-/* End Header*/
+  }
+  /* End Header*/
 
-/*Footer*/
-.panel-footer section {
+  /*Footer*/
+  .panel-footer section {
     margin-bottom: 30px;
     text-align: center;
-}
+  }
 
-.panel-footer section:nth-child(3) {
-    margin-bottom: 0;/*Margin already exist on the whole row*/
-}
-.panel-footer section hr {
+  .panel-footer section:nth-child(3) {
+    margin-bottom: 0; /*Margin already exist on the whole row*/
+  }
+  .panel-footer section hr {
     width: 50%;
-}
+  }
 
-/* Home Page*/
-.container .jumbotron {
+  /* Home Page*/
+  .container .jumbotron {
     margin-top: 30px;
     padding: 0;
-}
+  }
 
-#menu-tile, #special-tile {
+  #menu-tile,
+  #special-tile {
     width: 360px;
     margin: 0 auto 15px auto;
-}
-.menu-item-photo {
+  }
+  .menu-item-photo {
     margin-right: auto;
-}
-.menu-item-tile .menu-item-price {
+  }
+  .menu-item-tile .menu-item-price {
     text-align: center;
-}
-.menu-item-description {
+  }
+  .menu-item-description {
     text-align: center;
+  }
 }
 
-}
+/* Super Extra small device only  */
 
-/* Super Extra small device only*/
+@media (max-width: 478px) {
+  .container .jumbotron {
+    background: url('img/jumbotron_478.jpg') no-repeat;
+    width: auto;
+    height: 268px;
+  }
+  .navbar-brand h1 {
+    /* Restaurant Name; */
+    padding-top: 5px;
+    font-size: 6vw;
+  }
+  #menu-tile,
+  #special-tile {
+    width: 280px;
+    margin: 0 auto 15px;
+  }
 
-@media (max-width: 479px) {
-    /*home page*/
-
-    .container .jumbotron {
-        background: url('../img/jumbotron_478.jpg') no-repeat;
-        height: 315px;
-} 
-    .navbar-brand h1 {/*Restaurant Name*/
-        padding-top: 5px;
-        font-size: 6vw;
-
-    }
-    #menu-tile, #special-tile {
-        width: 280px;
-        margin: 0 auto 15px;
-    }
-
-    .col-xxs-12 {
-        position: relative;
-        min-height: 1px;
-        padding-right: 15px;
-        padding-left: 15px;
-        float: left;
-        width: 100;
-    }
+  .col-xxs-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+    width: 100;
+  }
 }
